--- a/custom_components/solaris/manifest.json
+++ b/custom_components/solaris/manifest.json
@@ -2,8 +2,9 @@
     "domain": "onesoftware",
     "name": "Solar1s",
     "version": "0.0.1",
+    "integration_type": "integration",
     "documentation": "https://github.com/1SoftwareCompany/solar1s",
     "requirements": [],
     "dependencies": [],
-    "codeowners": ["@mynkow"]
+    "codeowners": ["@1Software"]
   }
